--- a/American Option Pricing/American_Options_Pricing_Analytics (1).ipynb
+++ b/American Option Pricing/American_Options_Pricing_Analytics (1).ipynb
@@ -198,9 +198,7 @@
         "ϕ × (S - K) = PV_{Black}^{Eur}(K, T) + ϕ × \\left( 1 - e^{-qT} N_{(0, 1)} \\left(ϕ \\times d_1(S) \\right) \\right) × S / q\n",
         "$$\n",
         "\n",
-        "Solving the $S^*$ requires numerical methods as its equation has no closed-form solution. In this project, we combine both the Newton-Raphson and the Bisection methods.\n",
-        "\n",
-        "More details can be found in [Barone-Adesi-Whaley 1987](https://github.com/Idriss-Afra/American-Options-Pricing-Analytics/blob/main/Barone-Adesi-Whaley%201987.pdf)."
+        "Solving the $S^*$ requires numerical methods as its equation has no closed-form solution. In this project, we combine both the Newton-Raphson and the Bisection methods.\n"
       ]
     },
     {
@@ -417,8 +415,6 @@
         "\\end{equation}\n",
         "\n",
         "With the final condition being : $ PV_T(S) = Max\\left(ϕ × (S - K), 0 \\right) $\n",
-        "\n",
-        "More details can be found in [Longstaff-Schwartz Least-Squares MC Approach](https://github.com/Idriss-Afra/American-Options-Pricing-Analytics/blob/main/Longstaff-Schwartz%20Least-Squares%20MC%20Approach.pdf).\n",
         "\n",
         "\n",
         "\n",
