--- a/CMS Derivatives Pricing/CMS_Derivatives_Pricing_Analytics (1).ipynb
+++ b/CMS Derivatives Pricing/CMS_Derivatives_Pricing_Analytics (1).ipynb
@@ -73,7 +73,7 @@
         "\\end{split}\n",
         "\\end{equation}\n",
         "\n",
-        "We rewrite this derivative in the context of the [Hull-White One Factor model](https://github.com/Idriss-Afra/Hull-White-One-Factor-Model/blob/main/Hull-White%201F%20Model.ipynb) as :    \n",
+        "We rewrite this derivative in the context of the Hull-White One Factor model as :    \n",
         "\n",
         "$$\n",
         "a = \\frac{d}{dX_{T_f}} \\left( \\frac{B(T_f, T_p, X_{T_f})}{∑_{T^p_i \\in FixedLegPayDates} DCF_i × B(T_f, T^p_{i}, X_{T_f})}  \\right)_{S(T_f, X_{T_f}) = S(0)} × \\frac{1}{\\left( \\frac{d S(T_f, X_{T_f})}{dX_{T_f}}\\right)_{S(T_f, X_{T_f}) = S(0)}}\n",
@@ -391,8 +391,7 @@
         "        \"\"\"\n",
         "        if strike < self.strikes[0] or strike > self.strikes[-1] :\n",
         "            return interp1d(self.strikes, self.vol_data, kind='linear', fill_value=\"extrapolate\")(strike)\n",
-        "        return interp1d(self.strikes, self.vol_data, kind='cubic')(strike)\n",
-        ""
+        "        return interp1d(self.strikes, self.vol_data, kind='cubic')(strike)\n"
       ]
     },
     {
