--- a/CMS Spread Options Pricing/CMS_Spread_Options_Pricing_Analytics (1).ipynb
+++ b/CMS Spread Options Pricing/CMS_Spread_Options_Pricing_Analytics (1).ipynb
@@ -166,7 +166,7 @@
       "source": [
         "### The TSR Model : Linear Mean-Reversion\n",
         "\n",
-        "Second, we build the Linear Mean-Reversion TSR model class. Further details can be found in the section on [CMS Derivatives Pricing Analytics](https://github.com/Idriss-Afra/CMS-Pricing-Analytics/blob/main/CMS%20Derivatives%20Pricing%20Analytics.ipynb)."
+        "Second, we build the Linear Mean-Reversion TSR model class. Further details can be found in the section on CMS Derivatives Pricing Analytics"
       ]
     },
     {
@@ -448,8 +448,7 @@
         "        \"\"\"\n",
         "        if strike < self.strikes[0] or strike > self.strikes[-1] :\n",
         "            return interp1d(self.strikes, self.vol_data, kind='linear', fill_value=\"extrapolate\")(strike)\n",
-        "        return interp1d(self.strikes, self.vol_data, kind='cubic', fill_value=\"extrapolate\")(strike)\n",
-        ""
+        "        return interp1d(self.strikes, self.vol_data, kind='cubic', fill_value=\"extrapolate\")(strike)\n"
       ]
     },
     {
